# sdp-lmc

./: .git-blame-ignore-revs  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTORS  Dockerfile  LICENSE  Makefile  README.md  code-coverage.xml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  unit-tests.xml
docs/: requirements.txt
docs/src/: conf.py  index.rst  sdp_master.rst  sdp_subarray.rst
docs/src/images/: sdp_subarray_interaction_tango.drawio
docs/src/lmc/: sdp_master.rst  sdp_subarray.rst
src/ska_sdp_lmc/: __init__.py  base.py  base_config.py  commands.py  devices_config.py  event_loop.py  exceptions.py  feature_toggle.py  master.py  master_config.py  release.py  subarray.py  subarray_config.py  subarray_validation.py  tango_logging.py  util.py
tests/: conftest.py  device_utils.py  test_config.py  test_logging.py  test_master.py  test_subarray.py  test_util.py
tests/data/: command_AssignResources.json  command_AssignResources_invalid.json  command_AssignResources_previous.json  command_Configure.json  command_Configure_invalid.json  command_Configure_previous.json  command_Scan.json  command_Scan_previous.json  receive_addresses.json
tests/features/: master.feature  subarray.feature
