[metadata]
description-file = README.md

[aliases]
test = pytest

[run]
branch = True
source = ska_sdp_lmc
omit =
    */__main__.py
    */__init__.py
    */release.py

[tool:pytest]
junit_family = legacy
filterwarnings =
    ignore:.*Unknown.pytest\.mark.*
addopts = -vv
          --capture=no
          --gherkin-terminal-reporter
          --gherkin-terminal-reporter-expanded
          --cov=ska_sdp_lmc
          --cov-config=setup.cfg
          --cov-report=term
          --cov-report=xml:code-coverage.xml
          --cov-report=html
          --no-cov-on-fail
          --cov-append
          --cov-branch
          --junitxml=unit-tests.xml
          --cucumber-json=cucumber.json

[report]
skip_covered = False
sort = Cover

[bumpver]
current_version = "0.16.2"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Release {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
setup.cfg =
    current_version = "{version}"
src/ska_sdp_lmc/release.py =
    VERSION = "{version}"
docs/src/conf.py =
    version = "{version}"
    release = "{version}"